<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="Union_STRING_10" Id="{cd4e087d-503e-4c77-a4cc-a71e838c13ff}">
    <Declaration><![CDATA[TYPE Union_STRING_10 :
UNION
	value : STRING;
	Packed : ARRAY[0..9] OF BYTE;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>