<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="Union_STRING_3" Id="{ab28e7e5-95a8-4a9c-9602-8ce0a85f7bb2}">
    <Declaration><![CDATA[TYPE Union_STRING_3 :
UNION
	value : STRING;
	Packed : ARRAY[0..2] OF BYTE;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>